<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_image_height"
                android:src="@drawable/photo"
                android:scaleType="centerCrop"
                android:id="@+id/newsImage"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_description"
                android:background="@color/background_light"
                android:gravity="center"
                android:alpha="0.8"
                android:id="@+id/newsImageDescription"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text_color"
                android:text="@string/news_title"
                android:textSize="@dimen/xlarge_text"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text_color"
                    android:id="@+id/newsTime"
                    android:textSize="@dimen/small_text"
                    android:text="@string/news_time"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/small_text"
                    android:padding="5dp"
                    android:text="|"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/newsPublisher"
                    android:text="@string/news_publisher"
                    android:textSize="@dimen/small_text"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text"
                android:textColor="@color/primary_text_color"
                android:id="@+id/newsSubtitle"
                android:text="@string/news_subtitle"
                android:layout_marginTop="@dimen/small_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text_color"
                android:id="@+id/newsText"
                android:textSize="@dimen/large_text"
                android:text="@string/news_text"
                android:layout_marginTop="@dimen/small_text"
                android:lineSpacingExtra="4dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>